--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <img src="/img/icons8-verano-smith.svg" alt="Logo Rick" class="logo">
-  <h1>Rick and Morty App</h1>
+  <h1 class="titulo-app">Rick and Morty App</h1>
   <nav>
     <a href="/index.html">Personajes</a>
   </nav>
